# migrator

./: .gitignore  Cargo.toml  README.md
examples/migrations/: changelog.toml  changelog.yml  create_table.toml
examples/migrations/changes/: 1_create_table.yml  create_table.toml
src/: data_type.rs  main.rs  migration.rs  migrations.rs  migrator.rs  separator.rs  traits.rs
src/backend/: mod.rs  postgres.rs  sql_file.rs
src/executor/: checksum.rs  mod.rs  planner.rs  query_iter.rs  sql_file.rs
tests/: main.rs
tests/integration/basic/: schema.sql
tests/integration/basic/1/: migration.toml
tests/integration/multi_runs/: schema.sql
tests/integration/multi_runs/1/: create_table_2.toml
tests/integration/multi_runs/2/: create_table_3.toml
tests/integration/multipe_migrations/1/: create_table_1.toml  create_table_2.toml
tests/integration/multiple_changesets/1/: create_table.toml
