[package]
name = "migrator"
version = "0.1.0"
authors = ["Neeraj Jaiswal <neerajj85@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
glob = "0.3"
postgres = "0.18"
anyhow = "1.0"
sha3 = "0.9"
base64 = "0.13"

[dev-dependencies]
assert_cmd = "1.0"
walkdir = "2.3"
predicates = "1.0"
